--- a/packages/nds-formgroup/package.json
+++ b/packages/nds-formgroup/package.json
@@ -6,9 +6,9 @@
   "homepage": "https://github.com/nhsevidence/nice-design-system#readme",
   "license": "MIT",
   "types": "nds-formgroup.d.ts",
-  "main": "lib/Formgroup.js",
-  "module": "es/Formgroup.js",
-  "scss": "scss/Formgroup.scss",
+  "main": "lib/FormGroup.js",
+  "module": "es/FormGroup.js",
+  "scss": "scss/FormGroup.scss",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
