--- a/packages/nds-form-group/package.json
+++ b/packages/nds-form-group/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@nice-digital/nds-formgroup",
+  "name": "@nice-digital/nds-form-group",
   "version": "1.0.0",
   "description": "Form group component for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://github.com/nhsevidence/nice-design-system#readme",
   "license": "MIT",
-  "types": "nds-formgroup.d.ts",
+  "types": "nds-form-group.d.ts",
   "main": "lib/FormGroup.js",
   "module": "es/FormGroup.js",
-  "scss": "scss/FormGroup.scss",
+  "scss": "scss/form-group.scss",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
