--- a/packages/nds-radio/package.json
+++ b/packages/nds-radio/package.json
@@ -8,7 +8,7 @@
   "types": "nds-radio.d.ts",
   "main": "lib/Radio.js",
   "module": "es/Radio.js",
-  "scss": "scss/Radio.scss",
+  "scss": "scss/radio.scss",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
