--- a/packages/nds-stacked-nav/package.json
+++ b/packages/nds-stacked-nav/package.json
@@ -11,6 +11,7 @@
   "main": "lib/StackedNav.js",
   "module": "es/StackedNav.js",
   "style": "scss/stacked-nav.scss",
+  "types": "stacked-nav.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,7 +19,8 @@
   "files": [
     "lib",
     "es",
-    "scss"
+    "scss",
+    "*.d.ts"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
