--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -34,7 +34,9 @@
     "@nice-digital/nds-button": "^1.0.7-alpha.0",
     "@nice-digital/nds-card": "^1.0.7-alpha.0",
     "@nice-digital/nds-checkbox": "^1.0.12-alpha.0",
+    "@nice-digital/nds-core": "^1.0.7-alpha.0",
     "@nice-digital/nds-form-group": "^1.0.0",
+    "@nice-digital/nds-grid": "^1.0.0",
     "@nice-digital/nds-page-header": "^1.0.7-alpha.0",
     "@nice-digital/nds-panel": "^1.0.10-alpha.0",
     "@nice-digital/nds-radio": "^1.0.12-alpha.0",
