--- a/packages/nds-grid/package.json
+++ b/packages/nds-grid/package.json
@@ -11,6 +11,7 @@
   "main": "lib/Grid.js",
   "module": "es/Grid.js",
   "style": "scss/grid.scss",
+  "types": "nds-grid.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
