--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -41,6 +41,7 @@
     "@nice-digital/nds-page-header": "^1.0.7-alpha.0",
     "@nice-digital/nds-panel": "^1.0.10-alpha.0",
     "@nice-digital/nds-radio": "^1.0.12-alpha.0",
+    "@nice-digital/nds-stacked-nav": "^1.0.7-alpha.0",
     "@nice-digital/nds-tag": "^1.0.7-alpha.0",
     "@storybook/addon-a11y": "^5.1.11",
     "@storybook/addon-storysource": "^5.1.11",
