--- a/packages/nds-form-group/package.json
+++ b/packages/nds-form-group/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-form-group",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Form group component for the NICE Design System",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://github.com/nhsevidence/nice-design-system#readme",
@@ -37,8 +37,8 @@
     "@babel/cli": "^7.5.0"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.7-alpha.0",
-    "@nice-digital/nds-forms": "^1.0.12-alpha.0",
+    "@nice-digital/nds-core": "^1.0.8-alpha.0",
+    "@nice-digital/nds-forms": "^1.0.13-alpha.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2"
   },
