--- a/packages/nds-grid/package.json
+++ b/packages/nds-grid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-grid",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "Grid component for the NICE Design System",
   "keywords": [
     "grid"
@@ -36,7 +36,7 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.7-alpha.0",
+    "@nice-digital/nds-core": "^1.0.8-alpha.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2"
   }
