--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -38,6 +38,7 @@
     "@nice-digital/nds-core": "^1.0.8-alpha.0",
     "@nice-digital/nds-filters": "^1.0.8-alpha.0",
     "@nice-digital/nds-forms": "^1.0.13-alpha.0",
+    "@nice-digital/nds-grid": "^1.0.2-alpha.0",
     "@nice-digital/nds-hero": "^1.0.8-alpha.0",
     "@nice-digital/nds-in-page-nav": "^1.0.8-alpha.0",
     "@nice-digital/nds-maintain-ratio": "^1.0.8-alpha.0",
