--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -35,8 +35,10 @@
     "@nice-digital/nds-breadcrumbs": "^1.0.9-alpha.0",
     "@nice-digital/nds-button": "^1.0.9-alpha.0",
     "@nice-digital/nds-card": "^1.0.9-alpha.0",
+    "@nice-digital/nds-checkbox": "^1.0.14-alpha.0",
     "@nice-digital/nds-core": "^1.0.9-alpha.0",
     "@nice-digital/nds-filters": "^1.0.9-alpha.0",
+    "@nice-digital/nds-form-group": "^1.0.2-alpha.0",
     "@nice-digital/nds-forms": "^1.0.14-alpha.0",
     "@nice-digital/nds-grid": "^1.0.3-alpha.0",
     "@nice-digital/nds-hero": "^1.0.9-alpha.0",
