--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@nice-digital/nds-action-banner": "^1.0.9-alpha.0",
+    "@nice-digital/nds-alert": "^1.0.10-alpha.0",
     "@nice-digital/nds-breadcrumbs": "^1.0.9-alpha.0",
     "@nice-digital/nds-button": "^1.0.9-alpha.0",
     "@nice-digital/nds-card": "^1.0.9-alpha.0",
