--- a/package.json
+++ b/package.json
@@ -97,8 +97,39 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@babel/cli": "^7.5.0",
     "@nice-digital/icons": "^2.1.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@storybook/addon-a11y": "^5.1.11",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addon-storysource": "^5.1.11",
+    "@storybook/addon-viewport": "^5.1.9",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/preset-scss": "^1.0.2",
+    "@storybook/react": "^5.1.11",
+    "@types/faker": "^4.1.5",
+    "@types/history": "^4.7.3",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/storybook__react": "^4.0.2",
+    "classnames": "^2.2.6",
+    "faker": "^4.1.0",
+    "gatsby": "^2.17.6",
+    "gatsby-image": "^2.2.30",
+    "gatsby-plugin-manifest": "^2.2.25",
+    "gatsby-plugin-offline": "^3.0.17",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sharp": "^2.2.34",
+    "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-sharp": "^2.3.1",
+    "history": "^4.9.0",
+    "normalize.css": "7.0.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.2",
+    "sass-mq": "^5.0.0"
   }
 }
