--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.5.1",
     "@nice-digital/design-system": "^1.0.15-alpha.0",
     "@nice-digital/nds-hero": "^1.0.10-alpha.0",
+    "@types/react-helmet": "^5.0.14",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
