--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -8,6 +8,8 @@
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
     "@nice-digital/design-system": "^1.0.15-alpha.0",
+    "@nice-digital/global-nav": "github:nice-digital/global-nav",
+    "@nice-digital/nds-grid": "^1.0.4-alpha.0",
     "@nice-digital/nds-hero": "^1.0.10-alpha.0",
     "@types/react-helmet": "^5.0.14",
     "gatsby": "^2.17.6",
