--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "npm run dev",
     "dev": "concurrently \"npm run build:es:watch\" \"lerna run --scope=dev-app start\"",
     "// DOCUMENTATION": "",
-    "docs:dev": "lerna run --stream --scope=docs start",
-    "docs:build": "lerna run --stream --scope=docs build",
-    "docs:serve": "lerna run --stream --scope=docs serve",
+    "docs:dev": "lerna run --stream --scope=@nice-digital/design-system-documentation start",
+    "docs:build": "lerna run --stream --scope=@nice-digital/design-system-documentation build",
+    "docs:serve": "lerna run --stream --scope=@nice-digital/design-system-documentation serve",
     "// STORYBOOK": "",
     "storybook": "lerna run --stream --scope=storybook storybook",
     "storybook:build": "lerna run --scope=storybook build-storybook",
