--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "docs",
+  "name": "@nice-digital/design-system-documentation",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Documentation for the NICE Design System",
+  "version": "1.0.0",
+  "author": "Warren Keith <warren.keith@nice.org.uk>",
   "dependencies": {
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
@@ -42,13 +42,13 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/nice-digital/nice-design-system"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/nice-digital/nice-design-system/issues"
   }
 }
