--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -31,6 +31,7 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
+    "@nice-digital/icons": "^2.1.1",
     "@nice-digital/nds-action-banner": "^1.0.11-alpha.0",
     "@nice-digital/nds-alert": "^1.0.12-alpha.0",
     "@nice-digital/nds-breadcrumbs": "^1.0.11-alpha.0",
