--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "description": "Monorepo for the NICE Design System",
   "scripts": {
     "start": "npm run dev",
-    "dev": "concurrently \"npm run build:es:watch\" \"lerna run --scope=dev-app start\"",
+    "dev": "concurrently npm:build:es:watch npm:devapp npm:storybook",
+    "// DEVAPP (Playground)": "",
+    "devapp": "lerna run --scope=dev-app start",
     "// DOCUMENTATION": "",
     "docs:dev": "lerna run --stream --scope=@nice-digital/design-system-documentation start",
     "docs:build": "lerna run --stream --scope=@nice-digital/design-system-documentation build",
     "docs:serve": "lerna run --stream --scope=@nice-digital/design-system-documentation serve",
     "// STORYBOOK": "",
     "storybook": "lerna run --stream --scope=storybook storybook",
+    "storybook:dev": "concurrently npm:build:es:watch npm:storybook",
     "storybook:build": "lerna run --scope=storybook build-storybook",
     "// LERNA": "",
     "lerna": "lerna",
