--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -45,6 +45,7 @@
     "@nice-digital/nds-grid": "^1.0.12-alpha.0",
     "@nice-digital/nds-hero": "^1.0.18-alpha.0",
     "@nice-digital/nds-in-page-nav": "^1.0.18-alpha.0",
+    "@nice-digital/nds-input": "^1.0.0",
     "@nice-digital/nds-maintain-ratio": "^1.0.18-alpha.0",
     "@nice-digital/nds-page-header": "^1.0.18-alpha.0",
     "@nice-digital/nds-panel": "^1.0.21-alpha.0",
