--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -52,6 +52,7 @@
     "@nice-digital/nds-stacked-nav": "^1.0.18-alpha.0",
     "@nice-digital/nds-tabs": "^1.0.18-alpha.0",
     "@nice-digital/nds-tag": "^1.0.18-alpha.0",
+    "@nice-digital/nds-textarea": "^1.0.0",
     "normalize.css": "8.0.1",
     "react": "^16.11.0"
   },
