--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -46,6 +46,7 @@
     "@nice-digital/nds-stacked-nav": "^1.0.18-alpha.0",
     "@nice-digital/nds-tabs": "^1.0.18-alpha.0",
     "@nice-digital/nds-tag": "^1.0.18-alpha.0",
+    "@nice-digital/nds-textarea": "^1.0.0",
     "@storybook/addon-a11y": "^5.1.11",
     "@storybook/addon-storysource": "^5.1.11",
     "@types/storybook__react": "^4.0.2",
