--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -37,8 +37,10 @@
     "@nice-digital/nds-checkbox": "^1.0.23-alpha.0",
     "@nice-digital/nds-core": "^1.0.18-alpha.0",
     "@nice-digital/nds-form-group": "^1.0.11-alpha.0",
+    "@nice-digital/nds-forms": "^1.0.23-alpha.0",
     "@nice-digital/nds-grid": "^1.0.12-alpha.0",
     "@nice-digital/nds-hero": "^1.0.18-alpha.0",
+    "@nice-digital/nds-input": "^1.0.0",
     "@nice-digital/nds-maintain-ratio": "^1.0.18-alpha.0",
     "@nice-digital/nds-page-header": "^1.0.18-alpha.0",
     "@nice-digital/nds-panel": "^1.0.21-alpha.0",
