--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "1.0.21-alpha.0",
+  "version": "1.0.22-alpha.0",
   "private": true,
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
@@ -27,28 +27,28 @@
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/design-system": "^1.0.26-alpha.0",
+    "@nice-digital/design-system": "^1.0.27-alpha.0",
     "@nice-digital/icons": "^2.1.1",
-    "@nice-digital/nds-action-banner": "^1.0.18-alpha.0",
-    "@nice-digital/nds-alert": "^1.0.19-alpha.0",
-    "@nice-digital/nds-breadcrumbs": "^1.0.18-alpha.0",
-    "@nice-digital/nds-button": "^1.0.19-alpha.0",
-    "@nice-digital/nds-card": "^1.0.19-alpha.0",
-    "@nice-digital/nds-checkbox": "^1.0.23-alpha.0",
-    "@nice-digital/nds-core": "^1.0.18-alpha.0",
-    "@nice-digital/nds-form-group": "^1.0.11-alpha.0",
-    "@nice-digital/nds-forms": "^1.0.23-alpha.0",
-    "@nice-digital/nds-grid": "^1.0.12-alpha.0",
-    "@nice-digital/nds-hero": "^1.0.18-alpha.0",
-    "@nice-digital/nds-input": "^1.0.0",
-    "@nice-digital/nds-maintain-ratio": "^1.0.18-alpha.0",
-    "@nice-digital/nds-page-header": "^1.0.18-alpha.0",
-    "@nice-digital/nds-panel": "^1.0.21-alpha.0",
-    "@nice-digital/nds-radio": "^1.0.23-alpha.0",
-    "@nice-digital/nds-stacked-nav": "^1.0.18-alpha.0",
-    "@nice-digital/nds-tabs": "^1.0.18-alpha.0",
-    "@nice-digital/nds-tag": "^1.0.18-alpha.0",
-    "@nice-digital/nds-textarea": "^1.0.0",
+    "@nice-digital/nds-action-banner": "^1.0.19-alpha.0",
+    "@nice-digital/nds-alert": "^1.0.20-alpha.0",
+    "@nice-digital/nds-breadcrumbs": "^1.0.19-alpha.0",
+    "@nice-digital/nds-button": "^1.0.20-alpha.0",
+    "@nice-digital/nds-card": "^1.0.20-alpha.0",
+    "@nice-digital/nds-checkbox": "^1.0.24-alpha.0",
+    "@nice-digital/nds-core": "^1.0.19-alpha.0",
+    "@nice-digital/nds-form-group": "^1.0.12-alpha.0",
+    "@nice-digital/nds-forms": "^1.0.24-alpha.0",
+    "@nice-digital/nds-grid": "^1.0.13-alpha.0",
+    "@nice-digital/nds-hero": "^1.0.19-alpha.0",
+    "@nice-digital/nds-input": "^1.0.1-alpha.0",
+    "@nice-digital/nds-maintain-ratio": "^1.0.19-alpha.0",
+    "@nice-digital/nds-page-header": "^1.0.19-alpha.0",
+    "@nice-digital/nds-panel": "^1.0.22-alpha.0",
+    "@nice-digital/nds-radio": "^1.0.24-alpha.0",
+    "@nice-digital/nds-stacked-nav": "^1.0.19-alpha.0",
+    "@nice-digital/nds-tabs": "^1.0.19-alpha.0",
+    "@nice-digital/nds-tag": "^1.0.19-alpha.0",
+    "@nice-digital/nds-textarea": "^1.0.1-alpha.0",
     "@storybook/addon-a11y": "^5.1.11",
     "@storybook/addon-storysource": "^5.1.11",
     "@types/storybook__react": "^4.0.2",
