--- a/components/nds-forms/package.json
+++ b/components/nds-forms/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nice-digital/nds-forms",
   "version": "1.0.23-alpha.0",
-  "description": "Form components for the NICE Design System",
+  "description": "DEPRECATED! Use @nice-digital/nds-input and @nice-digital/nds-textarea",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
   "homepage": "https://github.com/nhsevidence/nice-design-system#readme",
   "license": "MIT",
@@ -37,10 +37,8 @@
     "@babel/cli": "^7.5.0"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.0.18-alpha.0",
-    "classnames": "^2.2.6",
-    "prop-types": "^15.7.2",
-    "react": "^16.11.0"
+    "@nice-digital/nds-input": "^1.0.0",
+    "@nice-digital/nds-textarea": "^1.0.0"
   },
   "gitHead": "a4db68f43916ad6c4cb19612e10aae200e80b5a8"
 }
