--- a/components/nds-simple-pagination/package.json
+++ b/components/nds-simple-pagination/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.0.20-alpha.0",
+    "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.11.0"
   },
