--- a/package.json
+++ b/package.json
@@ -51,23 +51,27 @@
     "access": "public"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-flow": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "@nice-digital/eslint-config": "^1.0.3",
-    "@svgr/cli": "^4.3.1",
-    "babel-eslint": "^10.0.2",
+    "@svgr/cli": "^5.1.0",
+    "babel-eslint": "^10.0.3",
     "doctoc": "^1.4.0",
-    "eslint": "^6.0.1",
-    "eslint-plugin-flowtype": "^3.11.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-flowtype": "^4.6.0",
     "grunt": "^1.0.4",
     "grunt-webfont": "^1.7.2",
-    "load-grunt-config": "^2.0.0",
-    "np": "^5.0.3"
+    "load-grunt-config": "^3.0.1",
+    "np": "^5.2.1"
   },
   "peerDependencies": {
     "react": ">=15"
+  },
+  "engines": {
+    "node": ">= 10.0.0",
+    "npm": ">= 6.8.0"
   }
 }
