--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -50,6 +50,7 @@
     "@nice-digital/nds-page-header": "^1.0.23-alpha.0",
     "@nice-digital/nds-panel": "^1.0.26-alpha.0",
     "@nice-digital/nds-phase-banner": "^1.0.23-alpha.0",
+    "@nice-digital/nds-radio": "1.0.29-alpha.0",
     "@nice-digital/nds-simple-pagination": "^1.0.4-alpha.0",
     "@nice-digital/nds-stacked-nav": "^1.0.27-alpha.0",
     "@nice-digital/nds-tabs": "^1.0.23-alpha.0",
