--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,54 +1,56 @@
 {
-  "name": "@nice-digital/design-system-documentation",
-  "private": true,
-  "description": "Documentation for the NICE Design System",
-  "version": "1.0.27-alpha.0",
-  "author": "Warren Keith <warren.keith@nice.org.uk>",
-  "dependencies": {
-    "@mdx-js/mdx": "^1.5.1",
-    "@mdx-js/react": "^1.5.1",
-    "@nice-digital/design-system": "^1.0.42-alpha.0",
-    "@nice-digital/global-nav": "github:nice-digital/global-nav",
-    "@nice-digital/nds-grid": "^1.0.19-alpha.0",
-    "@nice-digital/nds-hero": "^1.0.23-alpha.0",
-    "@types/react-helmet": "^5.0.14",
-    "gatsby": "^2.17.6",
-    "gatsby-image": "^2.2.30",
-    "gatsby-plugin-manifest": "^2.2.25",
-    "gatsby-plugin-mdx": "^1.0.56",
-    "gatsby-plugin-offline": "^3.0.17",
-    "gatsby-plugin-react-helmet": "^3.1.13",
-    "gatsby-plugin-sass": "^2.1.20",
-    "gatsby-plugin-sharp": "^2.2.34",
-    "gatsby-plugin-typescript": "^2.1.16",
-    "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-transformer-sharp": "^2.3.1",
-    "node-sass": "^4.13.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1"
-  },
-  "devDependencies": {
-    "prettier": "^1.18.2"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nice-digital/nice-design-system"
-  },
-  "bugs": {
-    "url": "https://github.com/nice-digital/nice-design-system/issues"
-  }
+	"name": "@nice-digital/design-system-documentation",
+	"private": true,
+	"description": "Documentation for the NICE Design System",
+	"version": "1.0.27-alpha.0",
+	"author": "Warren Keith <warren.keith@nice.org.uk>",
+	"dependencies": {
+		"@mdx-js/mdx": "^1.5.1",
+		"@mdx-js/react": "^1.5.1",
+		"@nice-digital/design-system": "^1.0.42-alpha.0",
+		"@nice-digital/global-nav": "github:nice-digital/global-nav",
+		"@types/react-helmet": "^5.0.14",
+		"gatsby": "^2.17.6",
+		"gatsby-image": "^2.2.30",
+		"gatsby-plugin-manifest": "^2.2.25",
+		"gatsby-plugin-mdx": "^1.0.56",
+		"gatsby-plugin-offline": "^3.0.17",
+		"gatsby-plugin-react-helmet": "^3.1.13",
+		"gatsby-plugin-sass": "^2.1.20",
+		"gatsby-plugin-sharp": "^2.2.34",
+		"gatsby-plugin-typescript": "^2.1.16",
+		"gatsby-source-filesystem": "^2.1.35",
+		"gatsby-transformer-remark": "^2.12.0",
+		"gatsby-transformer-sharp": "^2.3.1",
+		"node-sass": "^4.13.0",
+		"prop-types": "^15.7.2",
+		"react": "^16.11.0",
+		"react-dom": "^16.11.0",
+		"react-helmet": "^5.2.1"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3",
+		"prettier": "^1.18.2",
+		"slugify": "^1.4.6"
+	},
+	"keywords": [
+		"gatsby"
+	],
+	"license": "MIT",
+	"scripts": {
+		"build": "gatsby build",
+		"develop": "gatsby develop",
+		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+		"start": "npm run develop",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean",
+		"test": "echo \"Error: run tests from root\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nice-digital/nice-design-system"
+	},
+	"bugs": {
+		"url": "https://github.com/nice-digital/nice-design-system/issues"
+	}
 }
