--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -41,7 +41,7 @@
 		"build": "gatsby build",
 		"develop": "gatsby develop",
 		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-		"start": "npm run develop",
+		"start": "gatsby clean && npm run develop",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean",
 		"test": "echo \"Error: run tests from root\" && exit 1"
