--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,7 +9,9 @@
 		"@mdx-js/react": "^1.5.1",
 		"@nice-digital/design-system": "^1.0.42-alpha.0",
 		"@nice-digital/global-nav": "github:nice-digital/global-nav",
+		"@types/classnames": "^2.2.11",
 		"@types/react-helmet": "^5.0.14",
+		"classnames": "^2.2.6",
 		"gatsby": "^2.17.6",
 		"gatsby-image": "^2.2.30",
 		"gatsby-plugin-manifest": "^2.2.25",
