--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -31,8 +31,13 @@
 		"react-helmet": "^5.2.1"
 	},
 	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-jest": "^26.6.3",
 		"cross-env": "^7.0.3",
+		"jest": "^26.6.3",
+		"lodash": "^4.17.20",
 		"prettier": "^1.18.2",
+		"regenerator-runtime": "^0.13.7",
 		"slugify": "^1.4.6"
 	},
 	"keywords": [
@@ -47,7 +52,8 @@
 		"start": "gatsby clean && npm run develop",
 		"serve": "gatsby serve",
 		"clean": "gatsby clean",
-		"test": "echo \"Error: run tests from root\" && exit 1"
+		"test": "echo \"Error: run tests from root\" && exit 1",
+		"localtest": "jest --watch"
 	},
 	"repository": {
 		"type": "git",
