--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -31,6 +31,7 @@
 		"react-helmet": "^5.2.1"
 	},
 	"devDependencies": {
+		"@babel/preset-typescript": "^7.12.7",
 		"babel-core": "^6.26.3",
 		"babel-jest": "^26.6.3",
 		"cross-env": "^7.0.3",
