--- a/packages/docs/.babelrc
+++ b/packages/docs/.babelrc
@@ -1,3 +1,3 @@
 {
-  "presets": ["@babel/env", "@babel/preset-typescript"]
+  "presets": ["@babel/env", "@babel/preset-typescript", "babel-preset-gatsby"]
 }
