--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -31,9 +31,11 @@
 		"react-helmet": "^5.2.1"
 	},
 	"devDependencies": {
+		"@babel/preset-react": "^7.12.10",
 		"@babel/preset-typescript": "^7.12.7",
 		"babel-core": "^6.26.3",
 		"babel-jest": "^26.6.3",
+		"babel-preset-gatsby": "^0.11.0",
 		"cross-env": "^7.0.3",
 		"jest": "^26.6.3",
 		"lodash": "^4.17.20",
