--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -33,10 +33,13 @@
 	"devDependencies": {
 		"@babel/preset-react": "^7.12.10",
 		"@babel/preset-typescript": "^7.12.7",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
 		"babel-core": "^6.26.3",
 		"babel-jest": "^26.6.3",
 		"babel-preset-gatsby": "^0.11.0",
 		"cross-env": "^7.0.3",
+		"eslint": "^7.18.0",
 		"jest": "^26.6.3",
 		"lodash": "^4.17.20",
 		"prettier": "^1.18.2",
