--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@nice-digital/nds-grid",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.1",
   "description": "Grid component for the NICE Design System",
   "keywords": [
     "grid"
   ],
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
-  "homepage": "https://nhsevidence.github.io/nice-design-system/",
+  "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "main": "lib/Grid.js",
   "module": "es/Grid.js",
@@ -28,13 +28,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nhsevidence/nice-design-system.git"
+    "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
-    "url": "https://github.com/nhsevidence/nice-design-system/issues"
+    "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.1.1",
