--- a/components/nds-horizontal-nav/package.json
+++ b/components/nds-horizontal-nav/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@nice-digital/nds-horizontal-nav",
-	"version": "1.0.0",
+	"version": "1.1.0-alpha.0",
 	"description": "Horizontal navigation component for the NICE Design System",
 	"keywords": [
 		"navigation"
 	],
 	"author": "Warren Keith <w@rren.dev>",
-	"homepage": "https://nhsevidence.github.io/nice-design-system/",
+	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
 	"main": "lib/HorizontalNav.js",
 	"module": "es/HorizontalNav.js",
@@ -28,10 +28,10 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/nhsevidence/nice-design-system.git"
+		"url": "git+https://github.com/nice-digital/nice-design-system.git"
 	},
 	"bugs": {
-		"url": "https://github.com/nhsevidence/nice-design-system/issues"
+		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
 		"classnames": "^2.2.6",
