--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,32 +2,32 @@
 	"name": "@nice-digital/design-system-documentation",
 	"private": true,
 	"description": "Documentation for the NICE Design System",
-	"version": "1.1.3",
+	"version": "1.2.0-alpha.2",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"keywords": [
 		"gatsby"
 	],
 	"dependencies": {
-		"@nice-digital/design-system": "^1.1.3",
+		"@nice-digital/design-system": "^1.2.0-alpha.2",
 		"@nice-digital/nds-action-banner": "^1.1.0",
 		"@nice-digital/nds-alert": "^1.1.0",
 		"@nice-digital/nds-breadcrumbs": "^1.1.0",
 		"@nice-digital/nds-button": "^1.1.1",
-		"@nice-digital/nds-callout": "^1.0.0",
+		"@nice-digital/nds-callout": "^1.1.0-alpha.0",
 		"@nice-digital/nds-card": "^1.1.1",
 		"@nice-digital/nds-checkbox": "^1.1.1",
 		"@nice-digital/nds-core": "^1.1.1",
 		"@nice-digital/nds-filters": "^1.1.0",
 		"@nice-digital/nds-form-group": "^1.1.1",
 		"@nice-digital/nds-forms": "^1.1.0",
-		"@nice-digital/nds-grid": "^1.1.3",
 		"@nice-digital/nds-full-bleed": "^1.0.0",
+		"@nice-digital/nds-grid": "^1.2.0-alpha.1",
 		"@nice-digital/nds-hero": "^1.1.2",
-		"@nice-digital/nds-horizontal-nav": "^1.0.0",
-		"@nice-digital/nds-in-page-nav": "^1.1.1",
+		"@nice-digital/nds-horizontal-nav": "^1.1.0-alpha.0",
+		"@nice-digital/nds-in-page-nav": "^1.2.0-alpha.0",
 		"@nice-digital/nds-input": "^1.1.1",
 		"@nice-digital/nds-maintain-ratio": "^1.1.1",
-		"@nice-digital/nds-page-header": "^1.1.1",
+		"@nice-digital/nds-page-header": "^1.2.0-alpha.1",
 		"@nice-digital/nds-panel": "^1.1.1",
 		"@nice-digital/nds-phase-banner": "^1.1.1",
 		"@nice-digital/nds-prev-next": "^1.0.1",
