--- a/components/nds-filters/package.json
+++ b/components/nds-filters/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-filters",
-	"version": "1.2.1",
+	"version": "1.2.2-alpha.0",
 	"description": "Filter components for the NICE Design System",
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
@@ -31,8 +31,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.2.1",
 		"@nice-digital/icons": "^2.2.1",
+		"@nice-digital/nds-core": "^1.2.2-alpha.0",
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
