--- a/components/nds-hero/package.json
+++ b/components/nds-hero/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-hero",
-  "version": "1.2.2",
+  "version": "1.2.2-alpha.0",
   "description": "Hero component for the NICE Design System",
   "keywords": [
     "hero"
@@ -37,7 +37,7 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "dependencies": {
-    "@nice-digital/nds-core": "^1.2.2",
+    "@nice-digital/nds-core": "^1.2.2-alpha.0",
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
