--- a/components/nds-in-page-nav/package.json
+++ b/components/nds-in-page-nav/package.json
@@ -33,7 +33,9 @@
   },
   "dependencies": {
     "@nice-digital/nds-core": "^1.2.1",
-    "prop-types": "^15.7.2"
+    "lodash.throttle": "^4.1.1",
+    "prop-types": "^15.7.2",
+    "slugify": "^1.5.0"
   },
   "peerDependencies": {
     "react": "^16.11.0"
